@@ -163,6 +163,35 @@ dtoa():
   "This product includes software developed by the University of
    California, Berkeley and its contributors."
 
+lib/string/lib_vikmemcpy.c
+^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+  If you enable CONFIG_MEMCPY_VIK, then you will build with the optimized
+  version of memcpy from Daniel Vik.  Licensing information for that version
+  of memcpy() follows:
+
+  Copyright (C) 1999-2010 Daniel Vik
+
+  This software is provided 'as-is', without any express or implied
+  warranty. In no event will the authors be held liable for any
+  damages arising from the use of this software.
+  Permission is granted to anyone to use this software for any
+  purpose, including commercial applications, and to alter it and
+  redistribute it freely, subject to the following restrictions:
+ 
+  1. The origin of this software must not be misrepresented; you
+     must not claim that you wrote the original software. If you
+     use this software in a product, an acknowledgment in the
+     use this software in a product, an acknowledgment in the
+     product documentation would be appreciated but is not
+     required.
+ 
+  2. Altered source versions must be plainly marked as such, and
+     must not be misrepresented as being the original software.
+ 
+  3. This notice may not be removed or altered from any source
+     distribution.
+ 
 Documents/rss.gif
 ^^^^^^^^^^^^^^^^^
 
