@@ -155,40 +155,101 @@ if ARCH_OPTIMIZED_FUNCTIONS
 config ARCH_MEMCPY
 	bool "memcpy"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of memcpy().
+
+config MEMCPY_VIK
+	bool "Vik memcpy"
+	default n
+	depends on !ARCH_MEMCPY
+	---help---
+	Select this option to use the optimized memcpy() function by Daniel Vik.
+	See licensing information in the top-level COPYING file.
+
+if MEMCPY_VIK
+config MEMCPY_PRE_INC_PTRS
+	bool "Pre-increment pointers"
+	default n
+	---help---
+		Use pre-increment of pointers. Default is post increment of pointers.
+
+config MEMCPY_INDEXED_COPY
+	bool "Array indexing"
+	default y
+	---help---
+		Copying data using array indexing. Using this option, disables the
+		MEMCPY_PRE_INC_PTRS option.
+
+config MEMCPY_64BIT
+	bool "64-bit memcpy"
+	default n
+	---help---
+		Compiles memcpy for 64 bit architectures
+
+endif
 
 config ARCH_MEMCMP
 	bool "memcmp"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of memcmp().
 
 config ARCH_MEMMOVE
 	bool "memmove"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of memmove().
 
 config ARCH_MEMSET
 	bool "memset"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of memset().
 
 config ARCH_STRCMP
 	bool "strcmp"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of strcmp().
 
 config ARCH_STRCPY
 	bool "strcpy"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of strcpy().
 
 config ARCH_STRNCPY
 	bool "strncpy"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of strncpy().
 
 config ARCH_STRLEN
 	bool "strlen"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of strlen().
 
 config ARCH_STRNLEN
 	bool "strlen"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of strnlen().
 
 config ARCH_BZERO
 	bool "bzero"
 	default n
+	---help---
+		Select this option if the architecture provides an optimized version
+		of bzero().
+
 endif
