@@ -36,13 +36,21 @@
 # Add the string C files to the build
 
 CSRCS += lib_checkbase.c lib_isbasedigit.c lib_memset.c lib_memchr.c \
-		 lib_memccpy.c lib_memcpy.c lib_memcmp.c lib_memmove.c lib_skipspace.c \
+		 lib_memccpy.c lib_memcmp.c lib_memmove.c lib_skipspace.c \
 		 lib_strcasecmp.c lib_strcat.c lib_strchr.c lib_strcpy.c lib_strcmp.c \
 		 lib_strcspn.c lib_strdup.c lib_strerror.c lib_strlen.c lib_strnlen.c \
 		 lib_strncasecmp.c lib_strncat.c lib_strncmp.c lib_strncpy.c \
 		 lib_strndup.c lib_strcasestr.c lib_strpbrk.c lib_strrchr.c\
 		 lib_strspn.c lib_strstr.c lib_strtok.c lib_strtokr.c lib_strtol.c \
 		 lib_strtoll.c lib_strtoul.c lib_strtoull.c lib_strtod.c
+
+ifneq ($(CONFIG_ARCH_MEMCPY),y)
+ifeq ($(CONFIG_MEMCPY_VIK),y)
+CSRCS += lib_vikmemcpy.c
+else
+CSRCS += lib_memccpy.c
+endif
+endif
 
 # Add the string directory to the build
 
